--- a/css/style.css
+++ b/css/style.css
@@ -144,40 +144,123 @@ h1 span {
 
 /*--------------------------------------------------------------------------------*/
 /*                                                                                */
-/*                                                                                */
+/* F I R S T   S E C T I O N                                                      */
 /*                                                                                */
 /*--------------------------------------------------------------------------------*/
 
-/*
 section:first-of-type {
-    padding: 64px 0px 8px 20px;
+    padding: 64px 0 7px 0;
     background-image: linear-gradient(to bottom, #fdfdfd ,#cbcacf );
 }
 
-.article__1{
+.article__1 { 
+    width: 1050px;
+    border: 1px solid blue;
+    padding: 0 0;
     display: flex;
     justify-content: space-between;
-
-}
-
-.article__1 *{ 
-    padding: 10px 0;
+    z-index: 1;
 }
 
 .article__1__img {
-    width: 860px;
+
+    width: 100%;
     height: 430px;
+    padding-right: 20px;
     background-image: url('../images/black_chair.png');
     background-size: cover;
+    transform: translate(-80px, 0);
+    z-index: 1;
 }
 
 .article__1__content {
+    width: 100%;
+    padding-right: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
-*/
+.article__1__content * {
+    padding: 0 0 30px 0;
+    transform: translate(-6px, -23px);
+    z-index: 1;
+}
+
+h2 {
+    font-family: 'raleway', sans-serif;
+    font-weight: normal;
+    font-size: 39px;
+    color: #000;
+    text-transform: uppercase;
+    z-index: 1;
+}
+
+h2 span {
+    font-weight: bolder;
+    color: #24BA9F;
+    z-index: 1;
+}
+
+.article__1__content p {
+    font-family: 'raleway', sans-serif;
+    font-weight: normal;
+    letter-spacing: 1px;
+    font-size: 13px;
+    color: #000;
+    text-align: center;
+    line-height:22px;
+    z-index: 1;
+}
+
+.article__1__content a {
+    font-family: 'raleway', sans-serif;
+    font-weight: normal;
+    font-size: 24px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    width: 264px;
+    height: 52px;
+    border-radius: 10px;
+    background-color: #24BA9F;
+    padding: 14px 0 0 14px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    z-index: 1;
+}
+
+.article__1__back {
+    width: 80px;
+    height: 40px;
+    border-left: 5px solid #24BA9F;
+    border-bottom: 5px solid #24BA9F;
+    transform: translate(10px, calc(216px - 100%)) rotate(45deg);
+    position: relative;
+}
+
+.article__1__next {
+    width: 80px;
+    height: 40px;
+    border-right: 5px solid #24BA9F;
+    border-top: 5px solid #24BA9F;
+    transform: translate(-10px, calc(216px - 100%)) rotate(45deg);
+    position: relative;
+}
+
+/*-------------------------------------------- F I R S T   S E C T I O N  - E N D */
 
 
+/*--------------------------------------------------------------------------------*/
+/*                                                                                */
+/* S E C O N D   S E C T I O N                                                    */
+/*                                                                                */
+/*--------------------------------------------------------------------------------*/
+
+
+
+
+/*------------------------------------------ S E C O N D   S E C T I O N  - E N D */
