--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,6 @@ section:first-of-type {
 
 .article__1 { 
     width: 1050px;
-    border: 1px solid blue;
-    padding: 0 0;
     display: flex;
     justify-content: space-between;
     z-index: 1;
@@ -166,7 +164,7 @@ section:first-of-type {
 
     width: 100%;
     height: 430px;
-    padding-right: 20px;
+    padding-right: 40px;
     background-image: url('../images/black_chair.png');
     background-size: cover;
     transform: translate(-80px, 0);
@@ -260,7 +258,94 @@ h2 span {
 /*                                                                                */
 /*--------------------------------------------------------------------------------*/
 
+.section__2 .main_width {
+    padding: 27px 0 69px 0;
+    display: flex;
+    justify-content: space-between;
+}
 
+.main_width .section__2__item {
 
+    padding: 0 0 0 0;
+    height: 254px;
+    width: 32%; /*340*/
+
+}
+
+.main_width .section__2__item:first-child {
+
+    background-image: url('../images/box1_img.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.main_width .section__2__item:nth-child(2){
+
+    background-image: url('../images/box2_img.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.main_width .section__2__item:first-child .section__2__desc,
+.main_width .section__2__item:nth-child(2) .section__2__desc  {
+    font-family: 'raleway', sans-serif;
+    font-weight: normal;
+    font-size: 17px;
+    letter-spacing: -0.03em;
+    text-decoration: none;
+    padding: 15px 0 0 15px;
+    height: 62px;
+    background-color: rgba(255, 255, 255, 0.5);
+    position: relative;
+    bottom: calc(107px - 100%);
+    
+}
+
+.main_width .section__2__item:first-child .section__2__underline,
+.main_width .section__2__item:nth-child(2) .section__2__underline {
+    width: 137px;
+    height: 7px;
+    background-color: #24BA9F;
+    position: relative;
+    bottom: calc(136px - 100%);
+    left: 15px;
+}
+
+.main_width .section__2__item:nth-child(3) .section__2__desc{
+    font-family: 'raleway', sans-serif;
+    font-weight: normal;
+    font-size: 17px;
+    letter-spacing: -0.03em;
+    line-height: 0px;
+    color: #000;
+    text-decoration: none;
+    padding: 35px 0 0 24px;
+    position: relative;
+}
+
+.main_width .section__2__item:nth-child(3) .section__2__underline {
+    width: 137px;
+    height: 7px;
+    background-color: #24BA9F;
+    position: relative;
+    bottom: -10px;
+    left: 24px;
+}
+
+.main_width .section__2__item:nth-child(3) p {
+    font-family: 'raleway', sans-serif;
+    font-weight: normal;
+    font-size: 15px;
+    letter-spacing: -0.03em;
+    position: relative;
+ 
+    left: 22px;
+    line-height: 21px;
+    padding: 24px 45px 0 0;
+}
+
+.section__2__item:nth-child(3) {
+    border: 1px solid #aaaaaa;
+}
 
 /*------------------------------------------ S E C O N D   S E C T I O N  - E N D */
