--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,8 @@ h1 span {
 /*--------------------------------------------------------------------------------*/
 
 section:first-of-type {
-     background: linear-gradient(to bottom, #f9f9f9 0%,#fcfcfc 0%,#f8f8f8 0%,#fafafa 1%,#fafafa 8%,#f8f8f8 8%,#f7f7f7 45%,#f5f5f5 45%,#f5f5f5 54%,#f3f3f3 55%,#f3f3f3 58%,#f1f1f1 59%,#f1f1f3 63%,#eeeef0 64%,#eeeef0 66%,#eaeaec 69%,#ebebed 70%,#e7e7e9 72%,#e6e5ea 75%,#e2e1e6 77%,#e1e0e5 80%,#dddce1 82%,#dedde3 83%,#dbdae0 84%,#dbdae0 86%,#d7d6dc 89%,#d8d7dd 89%,#d5d4da 91%,#d6d5db 91%,#d4d3d9 92%,#d5d4dc 93%,#d2d1d9 94%,#d3d2da 95%,#d0cfd7 97%,#d1d0d8 99%,#cacdd4 100%);
+    background: linear-gradient(to bottom, #f9f9f9 0%,#fcfcfc 0%,#f8f8f8 0%,#fafafa 1%,#fafafa 8%,#f8f8f8 8%,#f7f7f7 45%,#f5f5f5 45%,#f5f5f5 54%,#f3f3f3 55%,#f3f3f3 58%,#f1f1f1 59%,#f1f1f3 63%,#eeeef0 64%,#eeeef0 66%,#eaeaec 69%,#ebebed 70%,#e7e7e9 72%,#e6e5ea 75%,#e2e1e6 77%,#e1e0e5 80%,#dddce1 82%,#dedde3 83%,#dbdae0 84%,#dbdae0 86%,#d7d6dc 89%,#d8d7dd 89%,#d5d4da 91%,#d6d5db 91%,#d4d3d9 92%,#d5d4dc 93%,#d2d1d9 94%,#d3d2da 95%,#d0cfd7 97%,#d1d0d8 99%,#cacdd4 100%);
+    padding: 73px 0 0 0;
 }
 
 .article__1 { 
@@ -161,7 +162,6 @@ section:first-of-type {
 }
 
 .article__1__img {
-
     width: 100%;
     height: 430px;
     padding-right: 40px;
@@ -238,6 +238,7 @@ h2 span {
     border-bottom: 5px solid #24BA9F;
     transform: translate(10px, calc(216px - 100%)) rotate(45deg);
     position: relative;
+    z-index: 2;
 }
 
 .article__1__next {
@@ -247,6 +248,7 @@ h2 span {
     border-top: 5px solid #24BA9F;
     transform: translate(-10px, calc(216px - 100%)) rotate(45deg);
     position: relative;
+    z-index: 2;
 }
 
 /*-------------------------------------------- F I R S T   S E C T I O N  - E N D */
@@ -265,11 +267,8 @@ h2 span {
 }
 
 .main_width .section__2__item {
-
-    padding: 0 0 0 0;
     height: 254px;
-    width: 32%; /*340*/
-
+    width: 32%; 
 }
 
 .main_width .section__2__item:first-child {
@@ -617,8 +616,6 @@ section.section__4 {
     transform: translateX(2px);
  }
  
-
-
  .section__4 .main_width .section__4__column:first-child {
     width: 61%;
  }
@@ -702,10 +699,74 @@ section.section__4 {
 /*                                                                                */
 /*--------------------------------------------------------------------------------*/
 
+.footer .main_width {
+    padding: 5px 0;
+    margin-bottom: 100px;
+    display: flex;
+    align-items: flex-end;
+}
 
+.footer .main_width div:nth-child(1) {
+    width: 65%;
+}
 
+.footer .main_width div:nth-child(2){
+    flex: 1;
+}
 
+.footer .main_width div:nth-child(3){
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+}
 
+    /* copyright */
 
+.footer p {
+    font-family: 'raleway', sans-serif;
+    color: gray;
+    font-weight: 500;
+    letter-spacing: 0.025em;
+    font-size: 17px;
+}
+
+    /* ikony społecznościwe */
+
+.footer__list {
+    padding: 0 10px;
+    display: flex;
+}
+
+.footer__list li {
+    height: 35px;
+    width: 35px;
+    background-size: contain;
+    margin: 0 auto;
+}
+
+.footer__list li:nth-child(1) {
+    background-image: url(../images/flickr.png);
+}
+
+.footer__list li:nth-child(2) {
+    background-image: url(../images/vimeo.png);
+}
+
+.footer__list li:nth-child(3) {
+    background-image: url(../images/pinterest.png);}
+
+.footer__list li:nth-child(4) {
+    background-image: url(../images/twitter.png);
+}
+
+    /* logo */
+
+.footer p.logo {
+    font-size: 20px;
+}
+
+.footer p.logo span {
+    font-weight: bolder;
+}
 
 /*------------------------------------------- F O O T E R  S E C T I O N  - E N D */
