--- a/css/style.css
+++ b/css/style.css
@@ -56,30 +56,30 @@
     align-items: center;
 }
 
-header {
+/* header {
     padding: 10px 0; 
     background-color: #000;
-}
+} */
 
-.--header-text {
+/* .--header-text {
     font-family: 'raleway', sans-serif;
     font-weight: normal;
     font-size: 14px;
     letter-spacing: 1px;
     word-spacing:  -1px;
     color: #fff;
-}
+} */
 
-h1 {
+/* h1 {
     text-transform: uppercase;
-}
+} */
 
-h1 span {
+/* h1 span {
     font-weight: bolder;
     color: #24BA9F;
-}
+} */
 
-.nav ul {
+/* .nav ul {
     display: flex;
     flex-direction: row;
 }
@@ -89,20 +89,20 @@ h1 span {
     padding-left: 35px;
     text-decoration: none;
     text-transform: uppercase;
-}
+} */
 
 /* D R O P D O W N -------------------------------------------------------------- */
 
-.nav__list__item {
+/* .nav__list__item {
     position: relative;
-}
+} */
 
-.dropdown__link {
+/* .dropdown__link {
     color: #fff;
     text-decoration: none;
-}
+} */
 
-.nav__list__item .dropdown__list {
+/* .nav__list__item .dropdown__list {
     width: 120px;
     height: 96px;
     background-color: #000;
@@ -115,8 +115,8 @@ h1 span {
     flex-direction: column;
 
     display: none; 
-}
-
+} */
+/* 
 .dropdown__list::before {
     content: '';
     width: 20px;
@@ -132,12 +132,12 @@ h1 span {
     height: 30px;
     position: absolute;
     transform: translate(-16px, -41px)
-}
+} */
 
-.nav__list__item:hover .dropdown__list {
+/* .nav__list__item:hover .dropdown__list {
     display: flex;
     flex-direction: column;
-}
+} */
 
 
 /*-------------------------------------------------- H E A D E R   C S S  - E N D */
