--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@
 
 @import "./elements/base";
 @import "./elements/header";
-@import "./elements/first-section";
+@import "./elements/slider";
 @import "./elements/second-section";
 @import "./elements/third-section";
 @import "./elements/fourth-section";
