--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ section:first-of-type {
     z-index: 1;
 }
 
-.article__1__img {
+/* .article__1__img {
     width: 100%;
     height: 430px;
     padding-right: 40px;
@@ -169,9 +169,9 @@ section:first-of-type {
     background-size: cover;
     transform: translate(-80px, 0);
     z-index: 1;
-}
+} */
 
-.article__1__content {
+/* .article__1__content {
     width: 100%;
     padding-right: 100px;
     display: flex;
@@ -179,7 +179,7 @@ section:first-of-type {
     justify-content: center;
     align-items: center;
     z-index: 1;
-}
+} */
 
 .article__1__content * {
     padding: 0 0 30px 0;
@@ -231,7 +231,7 @@ h2 span {
     z-index: 1;
 }
 
-.article__1__back {
+/* .article__1__back {
     width: 80px;
     height: 40px;
     border-left: 5px solid #24BA9F;
@@ -249,7 +249,7 @@ h2 span {
     transform: translate(-10px, calc(216px - 100%)) rotate(45deg);
     position: relative;
     z-index: 2;
-}
+} */
 
 /*-------------------------------------------- F I R S T   S E C T I O N  - E N D */
 
