--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -8,11 +8,6 @@ header {
 
     padding: $main-padding 0; 
     background-color: $color-header;
-    font-family: $main-font-family;
-
-    .container {
-        justify-content: space-between;
-    }
 
     .logo {
         padding-left: 0.7rem;
@@ -38,6 +33,7 @@ header {
         flex-direction: row;
         li {
             position: relative;
+            font-weight: 600;
             padding-left: 2.7rem;
             padding-right: 0.2rem;
             &:hover .dropdown {
@@ -48,7 +44,9 @@ header {
             }
         }
     }
-    
+}
+
+.navigation {    
     ul.dropdown {
         width: 120px;
         height: 96px;
@@ -61,6 +59,7 @@ header {
         display: none; 
         li {
             padding: 0;
+            font-weight: 400;
             &:hover {
                 background-color: lighten($color-header,30%);
             }
