--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -1,13 +1,16 @@
 
-/* podstawowe zmienne */
-
-// margines i padding
+// margin & padding
 
 $main-margin: 10px;
 $main-padding: 10px;
 
-// zdjęcia z slidera
+// slider images
 
 $image-black-chair: url('../images/black_chair.png');
 $image-orange-chair: url('../images/orange_chair.png');
 $image-red-chair: url('../images/red_chair.png');
+
+// products images
+
+$image-clair-chair: url('../images/box1_img.jpg');
+$image-margarita-chair: url('../images/box2_img.jpg');
