--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -7,7 +7,7 @@
 header {
 
     padding: $main-padding 0; 
-    background-color: $color-header;
+    background-color: $color-background-header;
 
     .logo {
         padding-left: 0.7rem;
@@ -26,6 +26,9 @@ header {
     a {
         font-size: 0.9rem;
         color: $color-font-primary-light;
+        &:hover {
+            color: $color-font-secondary;
+        }
     }
 
     ul {
@@ -42,6 +45,7 @@ header {
                 justify-content: space-between;
                 letter-spacing: 0.08rem;
             }
+
         }
     }
 }
@@ -50,7 +54,7 @@ header {
     ul.dropdown {
         width: 120px;
         height: 96px;
-        background-color: $color-header;
+        background-color: $color-background-header;
         padding: $main-padding;
         top: 38px;
         left: 27px;
@@ -60,9 +64,6 @@ header {
         li {
             padding: 0;
             font-weight: 400;
-            &:hover {
-                background-color: lighten($color-header,30%);
-            }
         }
     }
     
@@ -70,7 +71,7 @@ header {
         content: '';
         width: 10px;
         height: 10px;
-        background-color: $color-header;
+        background-color: $color-background-header;
         position: absolute;
         transform-origin: 50% 50%;
         transform: translate(400%,-150%) scale(1.3) rotate(45deg);
@@ -79,9 +80,9 @@ header {
     .dropdown::after {
         content: '';
         width: 120px;
-        height: 40px;
+        height: 20px;
         position: absolute;
-        transform: translate(-10px, -50px);
+        transform: translate(-10px, -30px);
     }
 
 }
