--- a/scss/elements/_prices-section.scss
+++ b/scss/elements/_prices-section.scss
@@ -116,7 +116,7 @@
             box-shadow: 0 0 0 1px $color-font-secondary;
         }
         h3 {
-            color: $color-font-secondary;
+            color: $color-font-primary-light;
         }
         div {
             background-color: $color-font-primary-light;
