--- a/scss/generic/_reset.scss
+++ b/scss/generic/_reset.scss
@@ -1,4 +1,9 @@
-// podstawowy reset:
+/*--------------------------------------------------------------------------------*/
+/*                                                                                */
+/* R E S E T                                                                      */
+/*                                                                                */
+/*--------------------------------------------------------------------------------*/
+
 * {
     margin: 0;
     padding: 0;
