--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -1,6 +1,10 @@
+//--------------------------------------------------------------------------------//
+//                                                                                //
+// C O L O R S                                                                    //
+//                                                                                //
+//--------------------------------------------------------------------------------//
 
-// kolory
-
+// primary
 $color-font-primary-dark: #000000;
 $color-font-primary-light: #ffffff;
 $color-font-secondary: #24BA9F;
