--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ h2 span {
 /*                                                                                */
 /*--------------------------------------------------------------------------------*/
 
-.section__2 .main_width {
+/* .section__2 .main_width {
     padding: 27px 0 69px 0;
     display: flex;
     justify-content: space-between;
@@ -269,9 +269,9 @@ h2 span {
 .main_width .section__2__item {
     height: 254px;
     width: 32%; 
-}
+} */
 
-.main_width .section__2__item:first-child {
+/* .main_width .section__2__item:first-child {
 
     background-image: url('../images/box1_img.jpg');
     background-size: contain;
@@ -283,9 +283,9 @@ h2 span {
     background-image: url('../images/box2_img.jpg');
     background-size: contain;
     background-repeat: no-repeat;
-}
+} */
 
-.main_width .section__2__item:first-child .section__2__desc,
+/* .main_width .section__2__item:first-child .section__2__desc,
 .main_width .section__2__item:nth-child(2) .section__2__desc  {
     font-family: 'raleway', sans-serif;
     font-weight: normal;
@@ -298,9 +298,9 @@ h2 span {
     position: relative;
     bottom: calc(107px - 100%);
     
-}
+} */
 
-.main_width .section__2__item:first-child .section__2__underline,
+/* .main_width .section__2__item:first-child .section__2__underline,
 .main_width .section__2__item:nth-child(2) .section__2__underline {
     width: 137px;
     height: 7px;
@@ -308,8 +308,8 @@ h2 span {
     position: relative;
     bottom: calc(136px - 100%);
     left: 15px;
-}
-
+} */
+/* 
 .main_width .section__2__item:nth-child(3) .section__2__desc{
     font-family: 'raleway', sans-serif;
     font-weight: normal;
@@ -320,18 +320,18 @@ h2 span {
     text-decoration: none;
     padding: 35px 0 0 24px;
     position: relative;
-}
+} */
 
-.main_width .section__2__item:nth-child(3) .section__2__underline {
+/* .main_width .section__2__item:nth-child(3) .section__2__underline {
     width: 137px;
     height: 7px;
     background-color: #24BA9F;
     position: relative;
     bottom: -10px;
     left: 24px;
-}
+} */
 
-.main_width .section__2__item:nth-child(3) p {
+/* .main_width .section__2__item:nth-child(3) p {
     font-family: 'raleway', sans-serif;
     font-weight: normal;
     font-size: 15px;
@@ -341,7 +341,7 @@ h2 span {
     left: 22px;
     line-height: 21px;
     padding: 24px 45px 0 0;
-}
+} */
 
 .section__2__item:nth-child(3) {
     border: 1px solid #aaaaaa;
@@ -357,7 +357,7 @@ h2 span {
 /*--------------------------------------------------------------------------------*/
 
 
-section.section__3 {
+/* section.section__3 {
     padding: 42px 0 70px 0;
     background-color: #f1f1f1;
 }
@@ -375,16 +375,16 @@ section.section__3 {
     background-color: #24BA9F;
     position: relative;
     bottom: -4px;
-}
+} */
 
-.section__3 .main_width:nth-child(2) .section__3__item {
+/* .section__3 .main_width:nth-child(2) .section__3__item {
     width: 100%;
     display: flex;
     justify-content: space-between;
 
-}
+} */
 
-.section__3__column {
+/* .section__3__column {
     margin: 75px 0 0 0;
     padding: 0 0 0 0;
     width: 31%;
@@ -392,9 +392,9 @@ section.section__3 {
     border: 2px solid #aaaaaa;
     
 
-}
+} */
 
-.section__3__column .section__3__column__circle {
+/* .section__3__column .section__3__column__circle {
     width: 50px;
     height: 50px;
     border: 10px solid #f1f1f1;;
@@ -405,9 +405,9 @@ section.section__3 {
     position: relative;
     left: 50%;
     transform: translateX(-50%) translateY(-65%);
-}
+} */
 
-.section__3__column h3 {
+/* .section__3__column h3 {
     font-family: 'raleway', sans-serif;
     font-weight: normal;
     font-size: 23px;
@@ -415,9 +415,9 @@ section.section__3 {
     letter-spacing: -0.03em;
     color: #24BA9F;
     transform: translateY(-65%);
-}
+} */
 
-.section__3__column div {
+/* .section__3__column div {
     height: 130px;
     width: 130px;
     text-align: center;
@@ -425,9 +425,9 @@ section.section__3 {
     border: 1px solid #aaaaaa;
     border-radius: 50%;
     transform: translateX(75%) translateY(5%);
-}
+} */
 
-.section__3__column div p:nth-child(1) {
+/* .section__3__column div p:nth-child(1) {
     font-family: 'raleway', sans-serif;
     color: #aaaaaa;
     font-size: 42px;
@@ -448,7 +448,7 @@ section.section__3 {
     font-size: 17px;
     font-weight: 800;
     transform: translateX(0%) translateY(100%);
-}
+} */
 
 .section__3__column:nth-child(2) {
     background-color:  #24BA9F;
@@ -505,7 +505,9 @@ section.section__3 {
     font-weight: 800;
     transform: translateX(0%) translateY(100%);
 }
-.section__3__column ul {
+
+
+/* .section__3__column ul {
     padding: 40px 0 20px 0;
 }
 
@@ -523,14 +525,14 @@ section.section__3 {
 
 .section__3__column ul li:nth-child(2n) {
     background-color:  #f1f1f1;
-}
+} */
 
 .section__3__column:nth-child(2n+1) {
     display: flex;
     flex-direction: column;
 }
 
-.section__3__column:nth-child(2n+1) a {
+/* .section__3__column:nth-child(2n+1) a {
     font-family: 'raleway', sans-serif;
     font-weight: normal;
     font-size: 17px;
@@ -546,7 +548,7 @@ section.section__3 {
 
     margin: auto 0 20px 0;
  
-}
+} */
 
 .section__3__column:nth-child(2n) {
     display: flex;
@@ -698,7 +700,7 @@ section.section__4 {
 /* F O O T E R  S E C T I O N                                                     */
 /*                                                                                */
 /*--------------------------------------------------------------------------------*/
-
+/* 
 .footer .main_width {
     padding: 5px 0;
     margin-bottom: 100px;
@@ -718,7 +720,7 @@ section.section__4 {
     flex: 1;
     display: flex;
     justify-content: flex-end;
-}
+} */
 
     /* copyright */
 
@@ -730,7 +732,7 @@ section.section__4 {
     font-size: 17px;
 }
 
-    /* ikony społecznościwe */
+    ikony społecznościwe
 
 .footer__list {
     padding: 0 10px;
