dodanie footer (ciąg dalszy przebudowy)

--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -14,3 +14,12 @@ $image-red-chair: url('../images/red_chair.png');
 
 $image-clair-chair: url('../images/box1_img.jpg');
 $image-margarita-chair: url('../images/box2_img.jpg');
+
+// social icons
+
+$image-flickr: url(../images/flickr.png);
+$image-vimeo: url(../images/vimeo.png);
+$image-pinterest: url(../images/pinterest.png);
+$image-twitter: url(../images/twitter.png);
+
+
