adding webpack support / instruction ('npm i' next=> 'npx webpack')

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import "./generic/reset";
 
-@import "./settings/fonts";
+@import "./settings/fonts"; // hmm?
 @import "./settings/colors";
 @import "./settings/variables";
 @import "./settings/all";
@@ -12,5 +12,3 @@
 @import "./elements/prices-section";
 @import "./elements/contact-section";
 @import "./elements/footer";
-
-
