--- a/scss/settings/_fonts.scss
+++ b/scss/settings/_fonts.scss
@@ -6,8 +6,8 @@
 
 @font-face {
     font-family: 'raleway';
-    src: url('./fonts/raleway-regular-webfont.woff2') format('woff2'),
-         url('./fonts/raleway-regular-webfont.woff') format('woff');
+    src: url('../fonts/raleway-regular-webfont.woff2') format('woff2'),
+         url('../fonts/raleway-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
