--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -18,7 +18,7 @@ $main-font-size: 14px;
 
 $image-black-chair: url('../images/black_chair.png');
 $image-orange-chair: url('../images/orange_chair.png');
-$image-red-chair: url('../images/orange_chair.png');
+$image-red-chair: url('../images/red_chair.png');
 
 // products images
 
