--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import "./generic/reset";
 
-@import "./settings/fonts"; // hmm?
+@import "./settings/fonts";
 @import "./settings/colors";
 @import "./settings/variables";
 @import "./settings/all";
@@ -10,5 +10,6 @@
 @import "./elements/slider-section";
 @import "./elements/products-section";
 @import "./elements/prices-section";
+@import "./elements/checkbox";
 @import "./elements/contact-section";
 @import "./elements/footer";
