--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -9,7 +9,7 @@
 $main-margin: 10px;
 $main-padding: 10px;
 
-// czcionka
+// font
 
 $main-font-family: 'raleway', sans-serif;
 $main-font-size: 14px;
