added support for application sections in app.js / patches in scss files

--- a/scss/elements/_contact-section.scss
+++ b/scss/elements/_contact-section.scss
@@ -98,7 +98,7 @@
   border: 1px solid $color-font-secondary;
   margin: 27px 0 0 0;
   width: 100%;
-  
+  color: $color-font-placeholders;
   font-family: $main-font-family;
   font-weight: normal;
   font-size: 34px;
