--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -8,6 +8,7 @@
 $color-font-primary-dark: #000000;
 $color-font-primary-light: #ffffff;
 $color-font-secondary: #24BA9F;
+$color-font-placeholders:#e2e2e2;
 
 // header
 $color-background-header: #000000;
