--- a/scss/elements/_checkbox.scss
+++ b/scss/elements/_checkbox.scss
@@ -26,7 +26,7 @@
 
 .inline {
   display:inline-block;
-  width:300px;
+  width:500px;
   padding:14px;
   vertical-align: top;
 }
@@ -43,12 +43,14 @@
   margin-top:22px;
   padding: 8px 12px;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .list_label {
-  font-size: 30px;
+  font-size: 20px;
   color: #e2e2e2;
-  font-family: 'ralewaylight', Arial, Tahoma, sans-serif;
+  font-family: 'raleway', Arial, Tahoma, sans-serif;
 }
 
 
@@ -131,7 +133,12 @@
   height:195px;
   padding:10px;
   margin-top: 50px;
-
+  display: flex;
+  flex-direction: column;
+  .panels {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .application .green_button {
@@ -151,7 +158,7 @@
 }
 .panel_left {
   display: inline-block;
-  width: 185px;
+  width: 60%;
   vertical-align: top;
   padding-bottom:10px;
   border-bottom:1px solid #e7e7e7;
@@ -175,7 +182,7 @@
 }
 
 .panel_left span{
-  margin-top:10px;
+  margin-top:5px;
   font-size: 22px;
   color: #5b5a5a;
   display: block;
@@ -185,7 +192,7 @@
   display: block;
   font-size: 22px;
   color: #24baa0;
-  margin-top:10px;
+  margin-top:5px;
 }
 .sum_label{
   display: inline-block;
@@ -213,28 +220,32 @@
   display:block;
   position: absolute;
   right: 14px;
-  top: 20px;
+  //top: 20px;
   cursor: pointer;
 }
 
 .list_panel {
   background-color: white;
   border: 1px solid #ccc;
-  width: 288px;
-  padding-left: 15px;
-  padding-bottom: 10px;
+  width: 280px;
+  //padding-left: 15px;
+  //padding-bottom: 10px;
   list-style: none;
   margin: 0;
-  left: 0px;
+  left: -1px;
   z-index: 2;
   position: absolute;
-  top: 54px;
+  top: 37px;
   display:none;
 }
 .list_panel li {
-  margin-top:10px;
+  //margin-top:10px;
+  padding: 10px;
   cursor: pointer;
   color: #585858;
+  &:hover {
+    background-color: lighten($color-font-secondary, 50%);
+  }
 }
 
 .title {
